# semantic-transmission

./: .gitattributes  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md
docs/: README.md  ROADMAP.md  architecture.md  cli-reference.md  comfyui-setup.md  demo-handbook.md  development-guide.md  gui-design.md  project-overview.md  user-guide.md
docs/collaboration/: 01-git-basics.md  02-github-flow.md  03-pull-request-guide.md  README.md  (+2 more)
scripts/: batch_demo.py  demo_e2e.py  download_models.py  evaluate.py  evaluate_video.py  run_receiver.py  run_sender.py  test_comfyui_connection.py  verify_workflows.py
tests/: test_cli.py  test_cli_sender.py  test_cli_video.py  test_cli_video_relay.py  test_comfyui_client.py  test_comfyui_receiver.py  test_comfyui_sender.py  test_config.py  test_diffusers_receiver.py  test_evaluate_script.py  test_evaluate_video_script.py  test_evaluation.py  test_gui_batch_panel.py  test_gui_pipeline_panel.py  test_gui_receiver_panel.py  test_gui_video_panel.py  test_gui_video_relay_panel.py  test_image_io.py  test_klein_config.py  test_klein_receiver.py  test_model_loader.py  test_project_config.py  test_qwen_vl_sender.py  test_receiver_factory.py  test_relay.py  test_temporal_consistency.py  test_temporal_policy.py  test_video_eval.py  test_video_io.py  test_video_pipeline.py  test_video_relay.py  test_video_relay_temporal.py  test_workflow_converter.py
(+176 files in other folders)
