[project]
name = "semantic-transmission"
version = "0.1.0"
description = "语义传输预研项目：基于 AI 模型的视频语义级压缩传输"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "websocket-client",
    "Pillow",
    "opencv-python",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_transmission"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
